--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
         package="com.example.android.softkeyboard">
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"        
+        android:largeScreens="true"
+        android:xlargeScreens="true" />
     <application android:label="@string/ime_name">
         <service android:name="SoftKeyboard"
                 android:permission="android.permission.BIND_INPUT_METHOD">
