--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
         package="com.example.android.softkeyboard">
+    <uses-sdk android:minSdkVersion="16" />
+
     <supports-screens
         android:smallScreens="true"
         android:normalScreens="true"        
