rename package and classes; add prev/next buttons

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-        package="com.example.android.softkeyboard">
+        package="kuanyingchou.bopomo_android">
     <uses-sdk android:minSdkVersion="16" />
 
     <supports-screens
@@ -7,20 +7,15 @@
         android:normalScreens="true"        
         android:largeScreens="true"
         android:xlargeScreens="true" />
+
     <application android:label="@string/ime_name">
-        <service android:name="MyKeyboard"
+        <service android:name="BoInput"
                 android:permission="android.permission.BIND_INPUT_METHOD">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
             <meta-data android:name="android.view.im" android:resource="@xml/method" />
         </service>
-
-        <activity android:name=".ImePreferences" android:label="@string/settings_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-            </intent-filter>
-        </activity>
 
     </application>
 </manifest>
