--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-        package="kuanyingchou.bopomo_android">
+        package="wen-input">
     <uses-sdk android:minSdkVersion="16" />
 
     <supports-screens
