--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,36 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-        package="org.wen_input">
+<?xml version="1.0" encoding="utf-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="org.wen_input" >
+
     <uses-sdk android:minSdkVersion="16" />
 
     <supports-screens
-        android:smallScreens="true"
-        android:normalScreens="true"        
         android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
         android:xlargeScreens="true" />
 
-    <application android:label="@string/ime_name">
-        <service android:name="WenInputService"
-                android:permission="android.permission.BIND_INPUT_METHOD">
+    <application android:label="@string/ime_name" >
+        <service
+            android:name="org.wen_input.WenInputService"
+            android:permission="android.permission.BIND_INPUT_METHOD" >
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
-            <meta-data android:name="android.view.im" android:resource="@xml/method" />
+
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
         </service>
 
+        <activity
+            android:name="org.wen_input.InputTest"
+            android:label="@string/title_activity_input_test" >
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
     </application>
+
 </manifest>
